<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_in">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="110dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/wb"
                android:textSize="24sp"
                android:layout_marginLeft="4dp"/>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wb1"
                android:textColor="@color/grey"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextEmailAddress2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/edit_email"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textColor="@color/grey"
                android:layout_marginTop="24dp"/>

            <EditText
                android:id="@+id/editTextTextPassword3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/edit_pass"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="187dp">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="228dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/grey"
                    android:text="@string/rp"
                    android:textColor="@color/grey" />

                <Button
                    android:id="@+id/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/no_col"
                    android:padding="0dp"
                    android:text="@string/fp"
                    android:textColor="@color/blue" />
            </LinearLayout>

            <Button
                android:id="@+id/logIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey"
                android:text="@string/logIn"
                app:cornerRadius="4.69dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/text4" />

                <Button
                    android:id="@+id/signUp2"
                    android:layout_width="52dp"
                    android:layout_height="38dp"
                    android:backgroundTint="@color/no_col"
                    android:padding="0dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="1dp"
                android:text="@string/log_in"
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mail"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>