<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_pass">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingLeft="21dp"
            android:paddingRight="21dp">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/FP"
                android:textSize="24sp"
                android:layout_marginLeft="4dp"/>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ent_fp"
                android:textColor="@color/grey"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/grey"
                android:layout_marginTop="56dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:inputType="text"
                android:text="@string/edit_email"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:background="@android:drawable/editbox_background"
                android:layout_marginBottom="56dp"/>

            <Button
                android:id="@+id/sendOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/s_otp"
                android:backgroundTint="@color/grey"
                app:cornerRadius="4.69dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rpass"
                    android:textColor="@color/grey" />

                <Button
                    android:id="@+id/signIn4"
                    android:layout_width="49dp"
                    android:layout_height="29dp"
                    android:backgroundTint="@color/no_col"
                    android:padding="0dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>