<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".New_Passvord">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingRight="20dp"
            android:paddingLeft="20dp">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/new_pass"
                android:textSize="24sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enp"
                android:textColor="@color/grey"
                android:layout_marginBottom="70dp"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextPassword4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/edit_pass"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass2"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextPassword5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/edit_pass"
                android:textColor="@color/grey" />

            <Button
                android:id="@+id/sendNew"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="71dp"
                android:backgroundTint="@color/grey"
                android:text="@string/li"
                app:cornerRadius="4.69dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


