<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/create"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="33dp"
                android:text="@string/cre2"
                android:textColor="@color/grey" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/fn"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextText2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="Ivanov Ivan"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey"
                android:textSize="14dp"
                android:background="@android:drawable/editbox_background"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="+7(999)999-99-99"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey"
                android:textSize="14dp"
                android:background="@android:drawable/editbox_background"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textEmailAddress"
                android:text="@string/edit_email"
                android:textColor="@color/grey"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPassword"
                android:text="@string/edit_pass"
                android:textColor="@color/grey"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass2"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/grey" />

            <EditText
                android:id="@+id/editTextTextPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:inputType="textPassword"
                android:text="@string/edit_pass"
                android:textColor="@color/grey"
                android:textSize="14dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="286dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/police"
                            android:textColor="@color/grey" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:text="@string/pol3"
                            android:textColor="@color/warning_yellow" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/police2"
                        android:textColor="@color/warning_yellow" />

                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/signup1"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:backgroundTint="@color/grey"
                android:text="@string/sign_up"
                app:cornerRadius="4.69dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/text4" />

                <Button
                    android:id="@+id/signIn3"
                    android:layout_width="52dp"
                    android:layout_height="38dp"
                    android:layout_marginLeft="1dp"
                    android:backgroundTint="@color/no_col"
                    android:padding="0dp"
                    android:text="@string/sign_in"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/google_text"
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mail"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>