<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_verification">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/otp_ver"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp1"
                android:textColor="@color/grey"
                android:layout_marginBottom="52dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp">

                <EditText
                    android:id="@+id/editTextNumber1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/editTextNumber3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/editTextNumber4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/editTextNumber5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/editTextNumber6"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:drawable/editbox_background"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp3"
                    android:textColor="@color/grey"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/sendNew"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:backgroundTint="@color/grey"
                android:layout_gravity="center"
                app:cornerRadius="4.69dp"
                android:text="@string/snp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


